# Rust-PathTracer

./: Cargo.toml
allocs/bouncing.trace/: form.template
allocs/bouncing.trace/Trace1.run/: RunIssues.storedata  event_data_6685.oa
allocs/bouncing.trace/Trace4.run/: RunIssues.storedata
allocs/bouncing.trace/corespace/run1/core/uniquing/: strings
allocs/perlin.trace/: form.template  open.creq
allocs/perlin.trace/Trace1.run/: RunIssues.storedata  event_data_7486.oa
allocs/perlin.trace/corespace/: MANIFEST.plist
benches/: random_vec_benchmark.rs
src/: main.rs  rendering.rs
src/rendering/: aabb.rs  bvh.rs  camera.rs  hit_record.rs  materials.rs  mod.rs  objects.rs  ray.rs  renderer.rs  scene.rs
src/rendering/math/: mod.rs  ray.rs  vec3.rs
src/rendering/objects/: mod.rs  sphere.rs  triangle.rs
time/bouncing.trace/: form.template
time/bouncing.trace/Trace1.run/: RunIssues.storedata
time/bouncing_cached_inv_dir.trace/: form.template
time/bouncing_cached_inv_dir.trace/Trace1.run/: RunIssues.storedata
time/bouncing_iter.trace/: form.template
time/bouncing_iter.trace/Trace1.run/: RunIssues.storedata
time/bouncing_iter_improved.trace/: form.template
time/bouncing_iter_improved.trace/Trace1.run/: RunIssues.storedata
time/bouncing_linear_bvh.trace/: form.template
time/bouncing_linear_bvh.trace/Trace1.run/: RunIssues.storedata
time/perlin.trace/Trace1.run/: RunIssues.storedata
time/perlin.trace/corespace/: MANIFEST.plist
time/perlin_improved.trace/: form.template
time/perlin_improved.trace/Trace1.run/: RunIssues.storedata
(+468 files in other folders)
